ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: your-app.example.com
      http:
        paths:
        - path: /*
          pathType: Prefix
          backend:
            service:
              name: your-app-service
              port:
                number: 80
